--- a/src/components/homepage/homepage.component.scss
+++ b/src/components/homepage/homepage.component.scss
@@ -1,25 +1,36 @@
+
+
 .fondoHome {
     width: 100%;
-    height: 50vh; /* Solo muestra la mitad de la altura de la imagen */
-    background-size: 100% auto; /* Hace la imagen panorámica sin distorsionar */
-    background-position: center top; /* Muestra la mitad superior */
+    height: 80vh; /* Solo muestra la mitad de la altura de la imagen */
+
     overflow: hidden; /* Evita que el resto de la imagen se vea fuera del contenedor */
-    
+    position: relative;
+
     img {
         width: 100%;
-        height: auto;
+        height: 100%;
         transition: filter 0.8s ease-in-out;
+
+        object-fit: cover; // Escala y recorta la imagen para llenar el contenedor
+        object-position: center; // Centra la imagen dentro del contenedor
 
         /* Difuminado desde el centro con un gradiente radial */
         mask-image: radial-gradient(
             ellipse at center,
-            rgba(0, 0, 0, 1) 30%,    /* Centro nítido */
-            rgba(0, 0, 0, 0.9) 50%,  /* Empieza a difuminarse */
+            rgba(0, 0, 0, 1) 50%,    /* Centro nítido */
+            rgba(0, 0, 0, 0.9) 60%,  /* Empieza a difuminarse */
             rgba(0, 0, 0, 0) 80%     /* Completamente difuminado en los bordes */
         );
 
+        
+        &:hover {
+            filter: blur(1px) saturate(2);
+        }
     }  
+
 }
+
 
 
 .cta-section {
@@ -193,20 +204,31 @@
     padding: 1rem;
     font-family: sans-serif;
     margin-top: 4rem; // Agrega espacio en la parte superior del contenedor
+
+    background-color: #3f3d56;
+
+    .value-proposition-wrapper {
+      max-width: 72rem;
+      margin: 0 auto;
+    }
+
+    .value-proposition-title {
+      
+      color: #1f2937; // text-gray-800
+      font-size: 1rem; // text-3xl
+      font-weight: 800; // font-extrabold
+  
+      @media (min-width: 640px) { // sm:text-5xl
+        font-size: 3rem;
+      }
+    }
   }
   
   // Wrapper
-  .value-proposition-wrapper {
-    max-width: 72rem;
-    margin: 0 auto;
-  }
+ 
   
   // Header
-  .value-proposition-title {
-    font-size: 2.25rem; // Text size equivalent to lg:text-4xl
-    font-weight: bold;
-    color: #4a4a4a; // Text gray-700 equivalent
-  }
+  
   
   .value-proposition-description {
     font-size: 1rem; // Base text size
@@ -262,3 +284,68 @@
       object-fit: fill; // Ajusta la imagen para que cubra el área sin deformarse
     }
   }
+
+  .talleres-container-principal {
+
+    h2 {
+      font-size: 3rem;
+    }
+    p {
+      font-size: 1.5rem;
+    }
+
+      .talleres-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 2rem;
+        padding: 2rem;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    
+    .taller-card {
+        background-color: #fff;
+        border: 1px solid #d1d5db;
+        border-radius: 8px;
+        padding: 1.5rem;
+        text-align: left;
+        transition: box-shadow 0.3s ease;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        cursor: pointer; /* Cambia el cursor a pointer */
+    
+        &:hover {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más fuerte en hover */
+        }
+    
+        h3 {
+            font-size: 1.25rem;
+            color: #111827;
+            margin-bottom: 0.75rem;
+            font-weight: 600;
+        }
+    
+        p {
+            font-size: 0.875rem;
+            color: #4b5563;
+            margin-bottom: 1.5rem;
+        }
+    }
+    
+    .image-container {
+        width: 100%;
+        height: 150px;
+        border-radius: 6px;
+        overflow: hidden;
+        margin-bottom: 1rem;
+    
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+  }
+
+
+  
